--- a/M06 T01 Supervised Learning Algorithms - Regression/M06 T01 Supervised Learning Algorithms - Regression.ipynb
+++ b/M06 T01 Supervised Learning Algorithms - Regression/M06 T01 Supervised Learning Algorithms - Regression.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "markdown",
    "id": "62ff0b17",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Exercise 1: Machine Learning model creation\n",
     "\n",
@@ -114,8 +116,7 @@
     "ExecuteTime": {
      "end_time": "2022-12-04T19:53:17.087060Z",
      "start_time": "2022-12-04T19:53:17.072078Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -476,8 +477,7 @@
     "ExecuteTime": {
      "end_time": "2022-12-04T19:53:17.119031Z",
      "start_time": "2022-12-04T19:53:17.103964Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -872,6 +872,7 @@
      "end_time": "2022-12-04T19:53:19.698694Z",
      "start_time": "2022-12-04T19:53:18.820958Z"
     },
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -959,8 +960,7 @@
     "ExecuteTime": {
      "end_time": "2022-12-04T19:53:23.311509Z",
      "start_time": "2022-12-04T19:53:20.440965Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
     "width": "349.091px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
