--- a/M04 T02 Graphical visualization of multiple variables/M04 T02 Graphical visualization of multiple variables.ipynb
+++ b/M04 T02 Graphical visualization of multiple variables/M04 T02 Graphical visualization of multiple variables.ipynb
@@ -1014,7 +1014,7 @@
     "width": "383.993px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
